samples/_failures_safe/1761418099_8d8b9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86e66c53.c: In function ‘main’:
./samples/SAFE/__tmp_86e66c53.c:182:21: error: expected ‘)’ at end of input
  182 |     while (getchar()
      |           ~         ^
      |                     )
./samples/SAFE/__tmp_86e66c53.c:182:5: error: expected declaration or statement at end of input
  182 |     while (getchar()
      |     ^~~~~
